# src/generated-api/src/models/DomainAffiliateExtraInfo.ts
@@ -1,0 +1,121 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Affiliate Backend API
+ * API Server for Affiliate Backend Application
+ *
+ * The version of the OpenAPI document: 1.0
+ * Contact: support@example.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface DomainAffiliateExtraInfo
+ */
+export interface DomainAffiliateExtraInfo {
+    /**
+     * 'cashback', 'blog', 'incentive', 'content', 'forum', 'sub_affiliate_network'
+     * @type {string}
+     * @memberof DomainAffiliateExtraInfo
+     */
+    affiliateType?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof DomainAffiliateExtraInfo
+     */
+    createdAt?: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof DomainAffiliateExtraInfo
+     */
+    extraInfoId?: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof DomainAffiliateExtraInfo
+     */
+    logoUrl?: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof DomainAffiliateExtraInfo
+     */
+    organizationId?: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof DomainAffiliateExtraInfo
+     */
+    selfDescription?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof DomainAffiliateExtraInfo
+     */
+    updatedAt?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof DomainAffiliateExtraInfo
+     */
+    website?: string;
+}
+
+/**
+ * Check if a given object implements the DomainAffiliateExtraInfo interface.
+ */
+export function instanceOfDomainAffiliateExtraInfo(value: object): value is DomainAffiliateExtraInfo {
+    return true;
+}
+
+export function DomainAffiliateExtraInfoFromJSON(json: any): DomainAffiliateExtraInfo {
+    return DomainAffiliateExtraInfoFromJSONTyped(json, false);
+}
+
+export function DomainAffiliateExtraInfoFromJSONTyped(json: any, ignoreDiscriminator: boolean): DomainAffiliateExtraInfo {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'affiliateType': json['affiliate_type'] == null ? undefined : json['affiliate_type'],
+        'createdAt': json['created_at'] == null ? undefined : json['created_at'],
+        'extraInfoId': json['extra_info_id'] == null ? undefined : json['extra_info_id'],
+        'logoUrl': json['logo_url'] == null ? undefined : json['logo_url'],
+        'organizationId': json['organization_id'] == null ? undefined : json['organization_id'],
+        'selfDescription': json['self_description'] == null ? undefined : json['self_description'],
+        'updatedAt': json['updated_at'] == null ? undefined : json['updated_at'],
+        'website': json['website'] == null ? undefined : json['website'],
+    };
+}
+
+export function DomainAffiliateExtraInfoToJSON(json: any): DomainAffiliateExtraInfo {
+    return DomainAffiliateExtraInfoToJSONTyped(json, false);
+}
+
+export function DomainAffiliateExtraInfoToJSONTyped(value?: DomainAffiliateExtraInfo | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'affiliate_type': value['affiliateType'],
+        'created_at': value['createdAt'],
+        'extra_info_id': value['extraInfoId'],
+        'logo_url': value['logoUrl'],
+        'organization_id': value['organizationId'],
+        'self_description': value['selfDescription'],
+        'updated_at': value['updatedAt'],
+        'website': value['website'],
+    };
+}
+
