# src/generated-api/src/models/DomainOrganizationWithExtraInfo.ts
@@ -1,0 +1,137 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Affiliate Backend API
+ * API Server for Affiliate Backend Application
+ *
+ * The version of the OpenAPI document: 1.0
+ * Contact: support@example.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { DomainOrganizationType } from './DomainOrganizationType';
+import {
+    DomainOrganizationTypeFromJSON,
+    DomainOrganizationTypeFromJSONTyped,
+    DomainOrganizationTypeToJSON,
+    DomainOrganizationTypeToJSONTyped,
+} from './DomainOrganizationType';
+import type { DomainAdvertiserExtraInfo } from './DomainAdvertiserExtraInfo';
+import {
+    DomainAdvertiserExtraInfoFromJSON,
+    DomainAdvertiserExtraInfoFromJSONTyped,
+    DomainAdvertiserExtraInfoToJSON,
+    DomainAdvertiserExtraInfoToJSONTyped,
+} from './DomainAdvertiserExtraInfo';
+import type { DomainAffiliateExtraInfo } from './DomainAffiliateExtraInfo';
+import {
+    DomainAffiliateExtraInfoFromJSON,
+    DomainAffiliateExtraInfoFromJSONTyped,
+    DomainAffiliateExtraInfoToJSON,
+    DomainAffiliateExtraInfoToJSONTyped,
+} from './DomainAffiliateExtraInfo';
+
+/**
+ * 
+ * @export
+ * @interface DomainOrganizationWithExtraInfo
+ */
+export interface DomainOrganizationWithExtraInfo {
+    /**
+     * 
+     * @type {DomainAdvertiserExtraInfo}
+     * @memberof DomainOrganizationWithExtraInfo
+     */
+    advertiserExtraInfo?: DomainAdvertiserExtraInfo;
+    /**
+     * 
+     * @type {DomainAffiliateExtraInfo}
+     * @memberof DomainOrganizationWithExtraInfo
+     */
+    affiliateExtraInfo?: DomainAffiliateExtraInfo;
+    /**
+     * 
+     * @type {string}
+     * @memberof DomainOrganizationWithExtraInfo
+     */
+    createdAt?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof DomainOrganizationWithExtraInfo
+     */
+    name?: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof DomainOrganizationWithExtraInfo
+     */
+    organizationId?: number;
+    /**
+     * 
+     * @type {DomainOrganizationType}
+     * @memberof DomainOrganizationWithExtraInfo
+     */
+    type?: DomainOrganizationType;
+    /**
+     * 
+     * @type {string}
+     * @memberof DomainOrganizationWithExtraInfo
+     */
+    updatedAt?: string;
+}
+
+
+
+/**
+ * Check if a given object implements the DomainOrganizationWithExtraInfo interface.
+ */
+export function instanceOfDomainOrganizationWithExtraInfo(value: object): value is DomainOrganizationWithExtraInfo {
+    return true;
+}
+
+export function DomainOrganizationWithExtraInfoFromJSON(json: any): DomainOrganizationWithExtraInfo {
+    return DomainOrganizationWithExtraInfoFromJSONTyped(json, false);
+}
+
+export function DomainOrganizationWithExtraInfoFromJSONTyped(json: any, ignoreDiscriminator: boolean): DomainOrganizationWithExtraInfo {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'advertiserExtraInfo': json['advertiser_extra_info'] == null ? undefined : DomainAdvertiserExtraInfoFromJSON(json['advertiser_extra_info']),
+        'affiliateExtraInfo': json['affiliate_extra_info'] == null ? undefined : DomainAffiliateExtraInfoFromJSON(json['affiliate_extra_info']),
+        'createdAt': json['created_at'] == null ? undefined : json['created_at'],
+        'name': json['name'] == null ? undefined : json['name'],
+        'organizationId': json['organization_id'] == null ? undefined : json['organization_id'],
+        'type': json['type'] == null ? undefined : DomainOrganizationTypeFromJSON(json['type']),
+        'updatedAt': json['updated_at'] == null ? undefined : json['updated_at'],
+    };
+}
+
+export function DomainOrganizationWithExtraInfoToJSON(json: any): DomainOrganizationWithExtraInfo {
+    return DomainOrganizationWithExtraInfoToJSONTyped(json, false);
+}
+
+export function DomainOrganizationWithExtraInfoToJSONTyped(value?: DomainOrganizationWithExtraInfo | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'advertiser_extra_info': DomainAdvertiserExtraInfoToJSON(value['advertiserExtraInfo']),
+        'affiliate_extra_info': DomainAffiliateExtraInfoToJSON(value['affiliateExtraInfo']),
+        'created_at': value['createdAt'],
+        'name': value['name'],
+        'organization_id': value['organizationId'],
+        'type': DomainOrganizationTypeToJSON(value['type']),
+        'updated_at': value['updatedAt'],
+    };
+}
+
